--- a/src/app/component/upload/upload.component.html
+++ b/src/app/component/upload/upload.component.html
@@ -1,20 +1,29 @@
 
     <div class="container mx-auto p-4">
         <h1 class="text-2xl font-semibold text-center mb-8 font-inknut">UPLOAD YOUR HOUSE PICTURES</h1>
-        <form action="#" method="post" enctype="multipart/form-data">
+        <form (ngSubmit)="onSubmit()" action="#" method="post" enctype="multipart/form-data">
+            <div class="mb-4">
+                <label for="picture" class="block text-gray-700 font-bold mb-2 font-inknut">Enter Your Email:</label>
+                <input type="text" id="email" name="email" class="p-2 border rounded w-full" [(ngModel)]="email">
+            </div>
             <div class="mb-4">
                 <label for="picture" class="block text-gray-700 font-bold mb-2 font-inknut">Select Picture:</label>
-                <input type="file" id="picture" name="picture" class="p-2 border rounded w-full">
+                <input type="file" id="picture" name="picture" class="p-2 border rounded w-full"(change)="onFileSelected($event)">
             </div>
             <div class="mb-4">
                 <label for="budget" class="block text-gray-700 font-bold mb-2 font-inknut">Budget:</label>
-                <input type="text" id="budget" name="budget" class="p-2 border rounded w-full">
+                <input type="text" id="budget" name="budget" class="p-2 border rounded w-full" [(ngModel)]="budget">
             </div>
             <div class="mb-4">
                 <button type="submit" class="bg-stone-700 hover:bg-stone-800 text-white font-bold py-2 px-4 rounded w-full">Upload</button>
             </div>
+            <div *ngIf="registrationmessage" class="registration-message">
+                {{ registrationmessage }}
+              </div>
+              
+
         </form>
-    </div><br><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br>
     <footer class="bg-stone-800 py-8">
         <div class="container mx-auto grid grid-cols-2 md:grid-cols-3 gap-4">
           <div class="col-span-2 md:col-span-1 border-b border-white md:border-b-0 md:border-r">
