--- a/src/app/component/user-registration/user-registration.component.html
+++ b/src/app/component/user-registration/user-registration.component.html
@@ -1,30 +1,34 @@
 <div class="container mx-auto px-4 py-8">
-    <h2 class="text-2xl font-bold mb-4">User Registration</h2>
-    <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="max-w-sm">
-        <div class="mb-4">
-            <label for="firstName" class="block mb-2">First Name:</label>
-            <input type="text" id="firstName" formControlName="firstName" class="form-input">
+    <h2 class="text-3xl font-bold text-center mb-8 font-inknut">User Registration</h2>
+    <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="max-w-xl mx-auto  rounded-lg shadow-md p-8 grid grid-cols-2 gap-6">
+        <div class="col-span-1">
+            <div class="mb-6">
+                <label for="firstName" class="block text-sm font-semibold mb-2 text-gray-800">First Name</label>
+                <input type="text" id="firstName" formControlName="firstName" class="form-input font-inknut w-full shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+            <div class="mb-6">
+                <label for="lastName" class="block text-sm font-semibold mb-2 text-gray-800">Last Name</label>
+                <input type="text" id="lastName" formControlName="lastName" class="form-input font-inknut w-full shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+            <div class="mb-6">
+                <label for="phoneNumber" class="block text-sm font-semibold mb-2 text-gray-800">Phone Number</label>
+                <input type="tel" id="phoneNumber" formControlName="phoneNumber" class="form-input font-inknut w-full shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
         </div>
-        <div class="mb-4">
-            <label for="lastName" class="block mb-2">Last Name:</label>
-            <input type="text" id="lastName" formControlName="lastName" class="form-input">
+        <div class="col-span-1">
+            <div class="mb-6">
+                <label for="email" class="block text-sm font-semibold mb-2 text-gray-800">Email</label>
+                <input type="email" id="email" formControlName="email" class="form-input w-full font-inknut shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+            <div class="mb-6">
+                <label for="password" class="block text-sm font-semibold mb-2 text-gray-800">Password</label>
+                <input type="password" id="password" formControlName="password" class="form-input font-inknut w-full shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+            <div class="mb-6">
+                <label for="address" class="block text-sm font-semibold mb-2 text-gray-800">Address</label>
+                <input type="text" id="address" formControlName="address" class="form-input w-full font-inknut shadow appearance-none border rounded  py-1 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
         </div>
-        <div class="mb-4">
-            <label for="phoneNumber" class="block mb-2">Phone Number:</label>
-            <input type="tel" id="phoneNumber" formControlName="phoneNumber" class="form-input">
-        </div>
-        <div class="mb-4">
-            <label for="email" class="block mb-2">Email:</label>
-            <input type="email" id="email" formControlName="email" class="form-input">
-        </div>
-        <div class="mb-4">
-            <label for="password" class="block mb-2">Password:</label>
-            <input type="password" id="password" formControlName="password" class="form-input">
-        </div>
-        <div class="mb-4">
-            <label for="address" class="block mb-2">Address:</label>
-            <input type="text" id="address" formControlName="address" class="form-input">
-        </div>
-        <button type="submit" [disabled]="registrationForm.invalid" class="btn btn-primary">Register</button>
+        <button type="submit" [disabled]="registrationForm.invalid" class="btn btn-primary col-span-2 w-full bg-stone-600 hover:bg-stone-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Register</button>
     </form>
 </div>
